<resources>
    <string name="baseUrl">http://cloud.insquare.it/</string>
    <string name="socket">http://chat.cloud.insquare.it/squares</string>
    <string name="squaresUrl">http://cloud.insquare.it/squares</string>
    <string name="app_name">inSquare</string>
    <string name="google_api_key">AIzaSyDqLoMQ7XqXUtffExOJlsSZJ23P1lSxu5Q</string>
    <string name="server_client_id">231545488769-vebgt9dn7al3bjf6koujod5ir703jv8b.apps.googleusercontent.com</string>
    <string name="facebook_app_id">743420882424724</string>
    <string name="google_project_number">231545488769</string>
    <string name="google_login_string">Google Login</string>
    <string name="google_logout_string">Google Logout</string>
    <string name="fb_login_string">Facebook Login</string>
    <string name="fb_logout_string">Facebook Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fab">InSquare</string>
    <string name="error_connect">Connessione fallita</string>
    <string name="message_user_joined">%s si è unito</string>
    <string name="message_user_left">%s è uscito</string>
    <string name="user_action_typing"> sta scrivendo</string>
    <string name="hint_descrizione">Inserisci una descrizione</string>
    <string name="hint_nome">Inserisci il nome</string>
    <string name="nome_square">Inserisci il nome della Square</string>
    <string name="descrizione_square">Inserisci la descrizione della Square</string>
    <string name="crea_square">Crea!</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="feedback">Feedback</string>
    <string name="dialog_feedback_hint">Scrivi qui il tuo consiglio</string>
    <string name="send">Invia</string>
    <string name="thanks_feedback">Grazie per il feedback!</string>
    <string name="error_feedback">Qualcosa è andato storto :(</string>
    <string name="connFail">Connessione fallita.</string>
    <string name="square_placeholder">Select a Square on the map</string>
    <string name="hint_cerca_squares">Cerca un luogo...</string>
    <string name="square_removed">Questa square è stata cancellata!</string>
    <plurals name="message_participants">
        <item quantity="one">There\'s %d participant</item>
        <item quantity="other">There are %d participants</item>
    </plurals>
    <string name="action_share">Condividi</string>
    <string name="action_mute">Gestisci notifiche</string>
    <string name="action_edit" translatable="false">Modifica</string>
    <string name="action_delete" translatable="false">Elimina</string>
    <string name="chat_favourite_action">Preferita</string>
    <string name="profile_empty_owned">Non hai ancora creato nessuna Square</string>
    <string name="profile_empty_favourite">Non stai seguendo nessuna Square</string>
    <string name="profile_empty_recent">Non hai scritto in nessuna Square</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="avatarURL">https://raw.githubusercontent.com/regini/inSquare/master/inSquareBackend/avatar_square_grey_512dp.png</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notification_fail">Image failed to upload...</string>
    <string name="notification_share_link">Share link</string>
    <string name="notifaction_success">Successfully uploaded</string>
    <string name="notification_progress">Uploading image...</string>
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">App Invite\nQuickstart</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">inSquare Invitation</string>
    <string name="invitation_message">Join me on inSquare</string>
    <string name="invitation_deep_link">https://play.google.com/store/apps/details?id=com.nsqre.insquare</string>
    <string name="invitation_custom_image">http://regini.github.io/inSquare/logoslogan.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_subject">Try this great app!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="custom_invite">Custom Invite</string>
    <string name="title_activity_top_bar">TopBarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_nav_tab_map">Mappa</string>
    <string name="bottom_nav_tab_created">Create</string>
    <string name="bottom_nav_tab_favs">Preferiti</string>
    <string name="bottom_nav_tab_recent">Recenti</string>
    <string name="bottom_nav_tab_settings">Impostazioni</string>
    <string name="title_activity_full_screen_image">FullScreenImage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_sceen_image">FullSceenImageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="transition_name_square_row">transition:ROW</string>
    <string name="transition_name_square_name">transition:NAME</string>
    <string name="transition_name_square_heart">transition:HEART</string>
    <string name="transition_name_square_circle">transition:CIRCLE</string>
    <string name="settings_connect_facebook">Connetti con Facebook</string>
    <string name="mute_1h">1h</string>
    <string name="mute_8h">8h</string>
    <string name="mute_2d">2d</string>
    <string name="mute_on">on</string>
    <string name="mute_off">off</string>
    <string name="tutorial_title1">Cos\'è inSquare?</string>
    <string name="tutorial_title2">Tieniti aggiornato!</string>
    <string name="tutorial_title3">Crea la tua Square!</string>
    <string name="tutorial_title4">Gestisci le tue Square</string>
    <string name="tutorial_1_intro">InSquare si propone di rendere più semplici le interazioni fra le persone ed i luoghi a cui sono interessate.\n
        E’ la soluzione <i>più semplice</i> per metterti in contatto direttamente con chi si trova sul posto, sapere cosa sta succedendo, chiedere notizie e non perdere mai le ultime novità.</string>
    <string name="tutorial_2_notifications">Aggiungendo una Square come <b>preferita</b>, le notifiche push ti terrano aggiornato in tempo reale, e sarai sempre aggiornato su novità, eventi e promozioni! Se hai una domanda </string>
    <string name="tutorial_3_longpress">È semplicissimo: se <b>tieni premuto</b> sulla mappa, si aprirà il menu di creazione\nNel menu potrai inserire i dati e creare una Square manualmente, o <b>collegarla a Facebook</b> tramite il link ad un evento o una pagina</string>
    <string name="tutorial_4_swipe">Nel tab <i>Create</i> puoi vedere le Square che hai creato. Puoi modificare nome e descrizione grazie al tasto <i>Modifica</i> e per cancellare una Square basterà <i>trascinarla verso sinistra</i></string>
    <string name="tutorial_square_types">Grazie ai pin di colore diverso puoi individuare facilmente le Square: <b>rosso</b> indica un luogo, <b>viola</b> un evento, e <b>verde</b> un\'attività commerciale.\n<i>N.B. le chat degli eventi si cancellano automaticamente dopo 24h</i></string>
    <string name="create_square_button_date">Data</string>
    <string name="create_square_button_time">Ora</string>
    <string name="tutorial_salta">Salta</string>
    <string name="tutorial_fine">Fine</string>
    <string name="review_fine">Fine</string>
    <string name="card_profile_modifica">Modifica</string>
    <string name="login_slogan">Where we go.\nWho we meet.</string>
    <string name="chat_initials">AVL</string>
    <string name="chat_square_name">Square Name</string>
    <string name="chat_send_suggestion">Scrivi un messaggio</string>
    <string name="create_square_next">Avanti</string>
    <string name="create_square_back">Indietro</string>
    <string name="create_event_insert_name">Inserisci un nome</string>
    <string name="create_event_insert_description">Inserisci una descrizione</string>
    <string name="create_event_date">Data</string>
    <string name="create_event_time">Ora</string>
    <string name="create_event_or">oppure</string>
    <string name="create_event_link">Link all\'evento di Facebook</string>
    <string name="create_event_connect">Collega con Facebook</string>
    <string name="bottomsheet_adapter_menu">Menu Item</string>
    <string name="bottomsheet_menu_square_name">Square Name</string>
    <string name="create_square_middle_insert">Inserisci un nome</string>
    <string name="create_square_middle_date">Data</string>
    <string name="create_square_middle_insert_descr">Inserisci una descrizione</string>
    <string name="create_square_place_insert_name">Inserisci un nome</string>
    <string name="create_square_place_insert_descr">Inserisci una descrizione</string>
    <string name="create_square_shop_insert_name">Inserisci un nome</string>
    <string name="create_square_shop_insert_descr">Inserisci una descrizione</string>
    <string name="create_square_shop_link">Link alla pagina Facebook</string>
    <string name="create_square_shop_connect">Collega con Facebook</string>
    <string name="drawer_item_line1">Line 1</string>
    <string name="drawer_item_line2">Line 2</string>
    <string name="photo_item_text">Large Text</string>
    <string name="photo_item_time">Time Text</string>
    <string name="photo_item_me_time">Time Text</string>
    <string name="frag_choose_luogo">Luogo</string>
    <string name="frag_choose_evento">Evento</string>
    <string name="frag_choose_attivita">Attività Commerciale</string>
    <string name="frag_place_initials">SN</string>
    <string name="frag_place_name">A very long square name that should resemble ones that we might have in our db</string>
    <string name="frag_place_price">$$$$ (50+)</string>
    <string name="frag_place_descr">This is a beautiful square that hasn\'t ever left us with nothing to think or talk about. It is just beautiful and marvellous to go to</string>
    <string name="frag_place_address">Via Vito Volterra, 34</string>
    <string name="frag_place_num_likes">1234</string>
    <string name="frag_create_name">Nome</string>
    <string name="frag_create_descr">Descrizione</string>
    <string name="frag_create_expiration">Conclusione evento:</string>
    <string name="frag_create_alert_expiration">La Square si cancella automaticamente 24h dopo l\'orario specificato</string>
    <string name="frag_create_or">oppure</string>
    <string name="frag_create_linkfb">Link all\'evento di Facebook</string>
    <string name="frag_create_connect">Collega con Facebook</string>
</resources>