<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/share_action"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom|collapseActionView">
    </item>
    <item
        android:id="@+id/favourite_square_action"
        android:title="@string/chat_favourite_action"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        />
    <item android:id="@+id/menu_entry_feedback"
        android:icon="@drawable/ic_more_vert_white_48dp"
        app:showAsAction="collapseActionView"
        android:title="@string/feedback"
        >
    </item>

    <FrameLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"/>
</menu>