<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_square_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreateSquare.SquareCreateFragment"
    >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <!--<include layout="@layout/create_square_upper_frame" />-->

            <LinearLayout
                android:id="@+id/create_square_userdata_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/search_bar_margin"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/create_square_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_create_name"
                        android:maxLines="3"
                        android:fontFamily="sans-serif-condensed" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/search_bar_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/create_square_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/frag_create_descr"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="7"
                        />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/create_square_date_time_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end|right"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_create_expiration"
                        />
                    <Button
                        android:id="@+id/create_square_date_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_square_button_date"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-condensed"
                        style="?android:attr/borderlessButtonStyle"
                        />

                    <Button
                        android:id="@+id/create_square_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_square_button_time"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-condensed"
                        style="?android:attr/borderlessButtonStyle"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/create_square_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frag_create_alert_expiration"
                    android:textColor="@color/md_orange_500"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_square_facebook_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    >

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"
                        android:layout_margin="8dp"
                        android:layout_weight="3"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frag_create_or"
                        />
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/colorDivider"
                        android:layout_margin="8dp"
                        android:layout_weight="3"
                        />

                </LinearLayout>



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/create_square_facebook_link_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:hint="@string/frag_create_linkfb"
                        android:fontFamily="sans-serif-condensed"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/create_square_facebook_link_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/frag_create_connect"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-condensed-bold"
                    android:theme="@style/RaisedFacebookButton"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
