<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input2_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:textColorHint="@color/colorPrimaryDark"
        >
        <EditText
            android:id="@+id/dialog_edit_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"
            android:maxLines="5"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed-thin"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:textColorHint="@color/colorPrimaryDark"
        >
        <EditText
            android:id="@+id/dialog_edit_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descrizione"
            android:maxLines="5"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed-thin"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:id="@+id/dialog_edit_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-condensed"
            />
    </LinearLayout>

</LinearLayout>