<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".Activities.LoginActivity"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:id="@+id/login_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/big_vertical_margin"
            android:text="@string/login_slogan"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="sans-serif-thin"
            android:alpha="0"
            tools:alpha="1"
            />

        <View
            android:id="@+id/login_horizontal_line"
            android:background="@color/white"
            android:layout_width = "wrap_content"
            android:layout_height="1dip"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_slogan"
            android:layout_marginTop="@dimen/big_vertical_margin"
            android:alpha="0"
            tools:alpha="1"

            app:layout_widthPercent="65%"
            />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/tutorial_logo"
            app:layout_widthPercent="75%"
            app:layout_heightPercent="25%"
            android:scaleX="0"
            android:scaleY="0"
            />

        <Button
            android:id="@+id/login_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_button_height"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_button_height"
            android:layout_above="@+id/login_google_button"
            android:text="@string/fb_login_string"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-condensed"
            style="@style/FacebookLoginButton"
            android:scaleX="0"
            android:scaleY="0"

            app:layout_widthPercent="55%"
            />


        <!-- alignStart e alignEnd uguali al FbButton assicurano che anche il tasto di
            Google Login abbia la stessa dimensione sul layout -->

        <Button
            android:id="@+id/login_google_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_button_height"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/linear_layout_lower_height"
            android:layout_alignParentBottom="true"
            android:text="@string/google_login_string"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-condensed"
            style="@style/GoogleLoginButton"
            android:scaleX="0"
            android:scaleY="0"
            app:layout_widthPercent="55%"
            />

    </android.support.percent.PercentRelativeLayout>
</RelativeLayout>
